Fixes right align issue on numeric column headers

--- a/src/WebComponents/QueryGrid/query-grid.scss
+++ b/src/WebComponents/QueryGrid/query-grid.scss
@@ -48,7 +48,7 @@
         }
     }
 
-    #dataHeaderHost, #dataFooterHost, #dataHost {
+    #dataFooterHost, #dataHost {
         table {
             td[numeric] {
                 text-align: right;
